Fix the 'z-index'

--- a/html_css_ii_dojo/stylesheet.css
+++ b/html_css_ii_dojo/stylesheet.css
@@ -23,6 +23,7 @@ header {
   top: 0;
   width: 100%;
   height: 65px;
+  z-index: 10;
 }
 
 .container {
